[Image behavior] fixed background jitter fix on mobile (#2611)

--- a/assets/base.css
+++ b/assets/base.css
@@ -3127,6 +3127,7 @@ details-disclosure > details {
 .animate--fixed > img:not(.zoom):not(.deferred-media__poster-button),
 .animate--fixed > svg:not(.zoom):not(.deferred-media__poster-button) {
   position: fixed;
+  height: 100vh;
 }
 
 /* Animations */
